--- a/Pag-Equipe/Equipe.css
+++ b/Pag-Equipe/Equipe.css
@@ -32,7 +32,11 @@ header{
 	padding: 10px 12%;
 	transition: all .50s ease;
   background-color: #10101040;
-    backdrop-filter: blur(5px);
+	-webkit-backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px);
+}
+main {
+	padding-top: 128px;
 }
 .logo{
 	display: flex;
@@ -156,8 +160,7 @@ header{
 	width: 100%;
 	max-width: 400px;
 	height: 200px;
-	margin: 10% auto;
-	margin-bottom: 10px;
+	margin: 0 auto;
 	color: var(--text-color);
 	text-align: center;
 	align-items: center;
@@ -170,24 +173,31 @@ header{
 
 }
 
-.BoxUser{
-	border: outset 5px var(--main-color);
-    border-radius: 10px;
-    width: 100%;
-    margin-bottom: 10px;
-	box-shadow: 5px 5px 0 0 black;
-	display: flex;
-	align-items: center;
-
-}
 
 .box-equipe{
 	max-width: 1024px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 20px 90px 10px 90px;
-    grid-gap: 90px;
+	margin: 0 auto;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	padding: 20px;
+	grid-gap: 20px;
+}
+
+.BoxUser{
+	border: outset 5px var(--main-color);
+	border-radius: 10px;
+	width: 100%;
+	margin-bottom: 10px;
+	box-shadow: 5px 5px 3px 0 black;
+	display: flex;
+	align-items: center;
+	padding: 1rem;
+	transition: .3s ease;
+}
+
+.BoxUser:hover{
+	transform: translateY(-5px);
+	box-shadow: 5px 5px 5px 0 black;
 }
 
 .name-User{
@@ -201,14 +211,24 @@ header{
 	width: 100%;
 	height: 100%;
 	display: flex;
+	align-items: center;
 	border: solid 0 5px 0 0 var(--main-color);
 	border-radius: 3px;
-
-
 }
 
 i{
 	color: var(--main-color);
 	font-size: 28px;
 	margin-right: 3px;
+}
+
+@media screen and (max-width: 1024px) {
+	.box-equipe{
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+@media screen and (max-width: 612px) {
+	.box-equipe{
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
