--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ header{
   background-color: #10101040;
     backdrop-filter: blur(5px);
 }
+main {
+	padding-top: 128px;
+}
 .logo{
 	display: flex;
 	align-items: center;
@@ -389,7 +392,6 @@ background-color: var(--main-color);
 	max-width: 550px;
   width: 100%;
     height: 155px;
-	margin-top: 130px;
 	margin-bottom: 0%;
 	align-items: center;
 	justify-content: center;
